# pico-threadx

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Taskfile.yml  pico-threadx.code-workspace
src/: main.c  tx_initialize_low_level.S
